--- a/chrome/includes/cascade-layout.css
+++ b/chrome/includes/cascade-layout.css
@@ -15,7 +15,9 @@
 #TabsToolbar,
 #navigator-toolbox,
 #sidebar-box,
-#nav-bar { box-shadow: none !important; }
+#nav-bar {
+  box-shadow: none !important;
+}
 
 
 #main-window,
@@ -24,18 +26,19 @@
 #PersonalToolbar,
 #navigator-toolbox,
 #sidebar-box,
-#nav-bar { border: none !important; }
+#nav-bar {
+  border: none !important;
+}
 
 
 /* remove "padding" left and right from tabs */
-.titlebar-spacer { display: none !important; }
+.titlebar-spacer {
+  display: none !important;
+}
 
 /* fix Shield Icon padding */
-#urlbar-input-container[pageproxystate="valid"]
-  > #tracking-protection-icon-container
-  > #tracking-protection-icon-box
-  > #tracking-protection-icon {
-    padding-bottom: 1px;
+#urlbar-input-container[pageproxystate="valid"]>#tracking-protection-icon-container>#tracking-protection-icon-box>#tracking-protection-icon {
+  padding-bottom: 1px;
 }
 
 
@@ -45,7 +48,7 @@
 #PersonalToolbar {
 
   padding: 6px !important;
-  box-shadow: inset 0 0 50vh rgba(0, 0, 0, var(--uc-darken-toolbar)) !important;;
+  box-shadow: inset 0 0 50vh rgba(0, 0, 0, var(--uc-darken-toolbar)) !important;
 
 }
 
