--- a/chrome/includes/cascade-nav-bar.css
+++ b/chrome/includes/cascade-nav-bar.css
@@ -1,12 +1,12 @@
-#navigator-toolbox:not(:-moz-lwtheme) { background: var(--toolbar-field-background-color) !important; ) }
-
-
+#navigator-toolbox:not(:-moz-lwtheme) {
+  background: var(--toolbar-field-background-color) !important;
+}
 
 #nav-bar {
 
   padding-block-start: 0px !important;
 
-  border:     none !important;
+  border: none !important;
   box-shadow: none !important;
   background: transparent !important;
 
@@ -19,29 +19,41 @@
   padding-block-start: var(--uc-urlbar-top-spacing) !important;
 
   outline: none !important;
-  box-shadow: none !important;
+  /* box-shadow: none !important; */
 
 }
 
+#urlbar-background {
+  border: transparent !important;
+}
 
-#urlbar-background { border: transparent !important; }
-
-#urlbar[focused='true']
-  > #urlbar-background,
-#urlbar:not([open])
-  > #urlbar-background { background: var(--toolbar-field-background-color) !important; }
+#urlbar[focused='true']>#urlbar-background,
+#urlbar:not([open])>#urlbar-background {
+  background: var(--toolbar-field-background-color) !important;
+}
 
 
-#urlbar[open]
-  > #urlbar-background { background: var(--toolbar-field-background-color) !important; }
+#urlbar[open]>#urlbar-background {
+  background: var(--toolbar-field-background-color) !important;
+}
 
 
 .urlbarView-row:hover
-  > .urlbarView-row-inner,
+/*> .urlbarView-row-inner*/
+,
 .urlbarView-row[selected]
-  > .urlbarView-row-inner { background: var(--toolbar-field-focus-background-color) !important; }
+
+/*> .urlbarView-row-inner*/
+  {
+  background: var(--toolbar-field-focus-background-color) !important;
+}
 
 
-.urlbar-icon, #urlbar-go-button { margin: auto; }
+.urlbar-icon,
+#urlbar-go-button {
+  margin: auto;
+}
 
-.urlbar-page-action { padding: 0 inherit !important; }
+.urlbar-page-action {
+  padding: 0 inherit !important;
+}
