--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -29,7 +29,9 @@
 
 
 @import 'includes/cascade-config.css';
-@import 'includes/cascade-colours.css';
+@import 'integrations/catppuccin/cascade-mocha.css';
+@import 'integrations/side-view/cascade-sideview.css';
+/* @import 'includes/cascade-colours.css'; */
 
 @import 'includes/cascade-layout.css';
 @import 'includes/cascade-responsive.css';
